# BeeIdle

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
modals/: __init__.py  confirm.py  create_name_file.py  open_directory.py  select_directory.py
styles/: app.tcss
widgets/: __init__.py  directory_tree_filtered.py  file.py  view_markdown.py  welcome.py
