[project]
name = "beeidle"
version = "0.1.0"
description = "Editor de código pelo terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=8.2.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
